2017-05-12  Uros Bizjak  <ubizjak@gmail.com>

	PR target/80723
	* config/i386/i386.c (ix86_rtx_cost) [case PLUS]: Ignore the
	cost of adding a carry flag for ADC instruction.
	[case MINUS]: Ignore the cost of subtracting a carry flag
	for SBB instruction.

2017-05-12  Steven Munroe  <munroesj@gcc.gnu.org>

	* config.gcc (powerpc*-*-*): Add bmi2intrin.h, bmiintrin.h,
	and x86intrin.h
	* config/rs6000/bmiintrin.h: New file.
	* config/rs6000/bmi2intrin.h: New file.
	* config/rs6000/x86intrin.h: New file.

2017-05-12  Jeff Law  <law@redhat.com>

	* tree-vrp.c (vrp_dom_walker::before_dom_children): Push unwinding
	markers.

2017-05-12  Peter Bergner  <bergner@vnet.ibm.com>

	PR middle-end/80707
	* tree-cfg.c: Remove cfg edges of unreachable case statements.

2017-05-12  Will Schmidt  <will_schmidt@vnet.ibm.com>

	* config/rs6000/rs6000.c (rs6000_gimple_fold_builtin): Add handling for
	early expansion of vector divide builtins.
	(builtin_function_type): Add VSX_BUILTIN_UDIV_V2DI to the list of
	builtins identified as having unsigned arguments.

2017-05-12  Will Schmidt  <will_schmidt@vnet.ibm.com>

	* config/rs6000/rs6000.c (gimple-fold.h): New #include.
	(rs6000_gimple_fold_builtin): Add handling for early GIMPLE
	expansion of vector logical operations (and, andc, or, xor,
	nor, orc, nand).

2017-05-12  Will Schmidt  <will_schmidt@vnet.ibm.com>

	* gimple-fold.c (create_tmp_reg_or_ssa_name): Remove static declaration.
	* gimple-fold.h (create_tmp_reg_or_ssa_name): New prototype.

2017-05-12  Will Schmidt  <will_schmidt@vnet.ibm.com>

	* config/rs6000/rs6000.c (rs6000_gimple_fold_builtin): Add handling for
	early GIMPLE expansion of vector multiplies.

2017-05-12  Prakhar Bahuguna  <prakhar.bahuguna@arm.com>

	* config/arm/arm.md (movsi): Add TARGET_32BIT in addition to the
	TARGET_HAVE_MOVT conditional.
	(movt splitter): Likewise.

2017-05-12  Richard Biener  <rguenther@suse.de>

	* tree-ssa-sccvn.h (has_VN_INFO): Declare.